--- a/app/src/main/res/layout/activity_section_f7_s1.xml
+++ b/app/src/main/res/layout/activity_section_f7_s1.xml
@@ -236,13 +236,15 @@
                     </LinearLayout>
 
                     <RadioGroup
+                        android:orientation="horizontal"
                         android:id="@+id/f7201"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <RadioButton
                             android:id="@+id/f7201a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7201.equals(`1`)}"
                             android:onClick="@{()->form.setF7201(`1`)}"
@@ -250,7 +252,8 @@
 
                         <RadioButton
                             android:id="@+id/f7201b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7201.equals(`2`)}"
                             android:onClick="@{()->form.setF7201(`2`)}"
@@ -289,13 +292,15 @@
                     </LinearLayout>
 
                     <RadioGroup
+                        android:orientation="horizontal"
                         android:id="@+id/f7202"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <RadioButton
                             android:id="@+id/f7202a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7202.equals(`1`)}"
                             android:onClick="@{()->form.setF7202(`1`)}"
@@ -303,7 +308,8 @@
 
                         <RadioButton
                             android:id="@+id/f7202b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7202.equals(`2`)}"
                             android:onClick="@{()->form.setF7202(`2`)}"
