--- a/app/src/main/res/layout/activity_section_f7_s4.xml
+++ b/app/src/main/res/layout/activity_section_f7_s4.xml
@@ -71,6 +71,7 @@
                     </LinearLayout>
 
                     <RadioGroup
+                        android:orientation="horizontal"
                         android:onCheckedChanged="@{()->f7403.clearCheck() }"
                         android:id="@+id/f7401"
                         android:layout_width="match_parent"
@@ -78,7 +79,8 @@
 
                         <RadioButton
                             android:id="@+id/f7401a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7401.equals(`1`)}"
                             android:onClick="@{()->form.setF7401(`1`)}"
@@ -86,7 +88,8 @@
 
                         <RadioButton
                             android:id="@+id/f7401b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7401.equals(`2`)}"
                             android:onClick="@{()->form.setF7401(`2`)}"
@@ -139,6 +142,7 @@
                             android:tag="0">
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
@@ -201,6 +205,7 @@
                                 android:text="@string/f7402g" />
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
@@ -289,6 +294,7 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:onCheckedChanged="@{()->f7404.clearCheck() + f7405.clearCheck()}"
                             android:id="@+id/f7403"
                             android:layout_width="match_parent"
@@ -296,7 +302,8 @@
 
                             <RadioButton
                                 android:id="@+id/f7403a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f7403.equals(`1`)}"
                                 android:onClick="@{()->form.setF7403(`1`)}"
@@ -304,7 +311,8 @@
 
                             <RadioButton
                                 android:id="@+id/f7403b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f7403.equals(`2`)}"
                                 android:onClick="@{()->form.setF7403(`2`)}"
@@ -351,13 +359,15 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f7404"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
                             <RadioButton
                                 android:id="@+id/f7404a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f7404.equals(`1`)}"
                                 android:onClick="@{()->form.setF7404(`1`)}"
@@ -365,7 +375,8 @@
 
                             <RadioButton
                                 android:id="@+id/f7404b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f7404.equals(`2`)}"
                                 android:onClick="@{()->form.setF7404(`2`)}"
@@ -481,6 +492,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+                            style="@style/sub_labels"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
@@ -680,20 +692,23 @@
                             android:text="@string/f7409" />
                     </LinearLayout>
 
+                    <TextView
+                        style="@style/sub_labels"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="@string/f7409t" />
+
                     <RadioGroup
                         android:id="@+id/f7409"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:text="@string/f7409t" />
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/f7409a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7409.equals(`1`)}"
                             android:onClick="@{()->form.setF7409(`1`)}"
@@ -701,7 +716,8 @@
 
                         <RadioButton
                             android:id="@+id/f7409b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7409.equals(`2`)}"
                             android:onClick="@{()->form.setF7409(`2`)}"
@@ -820,20 +836,23 @@
                             android:text="@string/f7411" />
                     </LinearLayout>
 
+                    <TextView
+                        style="@style/sub_labels"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="@string/f7411t" />
+
                     <RadioGroup
                         android:id="@+id/f7411"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:text="@string/f7411t" />
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <RadioButton
                             android:id="@+id/f7411a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7411.equals(`1`)}"
                             android:onClick="@{()->form.setF7411(`1`)}"
@@ -841,7 +860,8 @@
 
                         <RadioButton
                             android:id="@+id/f7411b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f7411.equals(`2`)}"
                             android:onClick="@{()->form.setF7411(`2`)}"
