--- a/app/src/main/res/layout/activity_section_f3.xml
+++ b/app/src/main/res/layout/activity_section_f3.xml
@@ -43,23 +43,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!-- f3title  Title   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVf3title"
-                    style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/f3title" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
                 <!-- f3101  Input   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf3101"
@@ -87,14 +70,16 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3101" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3101"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3101"
-                            android:text="@={form.f3101}" />
+                            <EditText
+                                android:id="@+id/f3101"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
+                                android:hint="@string/f3101"
+                                android:text="@={form.f3101}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -125,14 +110,15 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3102" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3102"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3102"
-                            android:text="@={form.f3102}" />
+                            <EditText
+                                android:id="@+id/f3102"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:hint="@string/f3102"
+                                android:text="@={form.f3102}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -163,14 +149,15 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3103" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3103"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3103"
-                            android:text="@={form.f3103}" />
+                            <EditText
+                                android:id="@+id/f3103"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:hint="@string/f3103"
+                                android:text="@={form.f3103}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -201,14 +188,15 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3104" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3104"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3104"
-                            android:text="@={form.f3104}" />
+                            <EditText
+                                android:id="@+id/f3104"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:hint="@string/f3104"
+                                android:text="@={form.f3104}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -239,14 +227,15 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3105" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3105"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3105"
-                            android:text="@={form.f3105}" />
+                            <EditText
+                                android:id="@+id/f3105"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:hint="@string/f3105"
+                                android:text="@={form.f3105}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -277,14 +266,16 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3106" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3106"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3106"
-                            android:text="@={form.f3106}" />
+                            <EditText
+                                android:id="@+id/f3106"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
+                                android:hint="@string/f3106"
+                                android:text="@={form.f3106}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -315,14 +306,15 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3107" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3107"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3107"
-                            android:text="@={form.f3107}" />
+                            <EditText
+                                android:id="@+id/f3107"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:hint="@string/f3107"
+                                android:text="@={form.f3107}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -353,14 +345,16 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/f3108" />
-                        </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/f3108"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/f3108"
-                            android:text="@={form.f3108}" />
+                            <EditText
+                                android:id="@+id/f3108"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
+                                android:hint="@string/f3108"
+                                android:text="@={form.f3108}" />
+                        </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -512,22 +506,11 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-                <!-- f3note  Title   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVf3note"
-                    style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/f3note" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                <TextView
+                    style="@style/info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/f3note" />
 
                 <!-- f3301  Radio   -->
                 <androidx.cardview.widget.CardView
@@ -977,7 +960,7 @@
                                     android:hint="@string/f340296"
                                     android:tag="f340296"
                                     android:text="@={form.f340296x}"
-                                    android:visibility='@{f340296.checked? View.VISIBLE : View.GONE}' />
+                                    android:visibility='@{form.f3402.equals(`96`) ? View.VISIBLE : View.GONE}' />
                             </RadioGroup>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
@@ -1090,14 +1073,15 @@
                                         android:layout_height="match_parent"
                                         android:layout_weight="1"
                                         android:text="@string/f3404" />
-                                </LinearLayout>
 
-                                <EditText
-                                    android:id="@+id/f3404"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="@string/f3404"
-                                    android:text="@={form.f3404}" />
+                                    <EditText
+                                        android:id="@+id/f3404"
+                                        android:layout_width="0dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_weight="1"
+                                        android:hint="@string/f3404"
+                                        android:text="@={form.f3404}" />
+                                </LinearLayout>
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
                     </LinearLayout>
