--- a/app/src/main/res/layout/activity_section_f7_s6.xml
+++ b/app/src/main/res/layout/activity_section_f7_s6.xml
@@ -14,42 +14,50 @@
             type="edu.aku.hassannaqvi.uen_kmc.ui.sections.SectionF7S6Activity" />
     </data>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/GrpName"
+        <!-- CUSTOM TOOLBAR -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@null"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@color/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/CustomToolbarTheme"
+            app:popupTheme="@style/CustomPopupTheme"
+            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
+            app:title="@string/f7title"
+            app:titleTextAppearance="@style/Toolbar.TitleText" />
 
-            <!-- f7s5title  Title   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVf7s5title"
-                style="@style/cardView">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-                <LinearLayout
+            <LinearLayout
+                android:id="@+id/GrpName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/sub_labels"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:text="@string/f7s5title" />
 
-                    <TextView
+                <!-- f7501  Radio   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVf7501"
+                    style="@style/cardView">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/f7s5title" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- f7501  Radio   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVf7501"
-                style="@style/cardView">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                        android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -212,7 +220,7 @@
                                 android:hint="@string/f750296"
                                 android:tag="f750296"
                                 android:text="@={form.f750296x}"
-                                android:visibility='@{f750296.checked? View.VISIBLE : View.GONE}' />
+                                android:visibility='@{form.f750296.equals(`96`) ? View.VISIBLE : View.GONE}' />
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -254,8 +262,6 @@
                             android:inputType="number"
                             android:maxLength="3"
                             android:text="@={form.f7503}"
-
-
                             app:maxValue="100"
                             app:minValue="1"
                             app:type="range" />
@@ -517,7 +523,7 @@
                                 android:hint="@string/f750696"
                                 android:tag="f750696"
                                 android:text="@={form.f750696x}"
-                                android:visibility='@{f750696.checked? View.VISIBLE : View.GONE}' />
+                                android:visibility='@{form.f750696.equals(`96`) ? View.VISIBLE : View.GONE}' />
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -588,7 +594,7 @@
                                 android:hint="@string/f750796"
                                 android:tag="f750796"
                                 android:text="@={form.f750796x}"
-                                android:visibility='@{f750796.checked? View.VISIBLE : View.GONE}' />
+                                android:visibility='@{form.f7507.equals(`96`) ? View.VISIBLE : View.GONE}' />
                         </RadioGroup>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -718,6 +724,7 @@
                     android:text="Save"
                     android:textColor="@color/white" />
             </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 </layout>
