--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -14,6 +14,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:background="@drawable/app_bg_gray"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -22,6 +23,17 @@
             android:animateLayoutChanges="false"
             android:gravity="center"
             android:orientation="vertical">
+            <!-- CUSTOM TOOLBAR -->
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layoutDirection="ltr"
+                android:textAlignment="center"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:title="Data Sync Screen"
+                app:titleTextColor="@color/grayDark" />
 
             <TextView
                 style="@style/TextAppearance.AppCompat.Large"
@@ -34,26 +46,30 @@
                 android:shadowDx="2"
                 android:shadowDy="2"
                 android:shadowRadius="2"
+                android:visibility="gone"
                 android:text="DATA SYNC ACTIVITY"
                 android:textColor="@color/colorPrimary" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorAccentLightOverlay"
+                android:padding="24dp"
                 android:orientation="horizontal">
 
 
                 <Button
                     android:id="@+id/btnSync"
                     style="@style/TextAppearance.AppCompat.Small"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/colorPrimary"
                     android:elevation="2dp"
                     android:onClick="ProcessStart"
                     android:padding="16dp"
-                    android:text="@string/download_data"
+                    android:text="@string/btnDownload"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
@@ -61,22 +77,24 @@
                     android:id="@+id/btnUpload"
                     style="@style/TextAppearance.AppCompat.Small"
 
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_margin="5dp"
                     android:layout_marginTop="15dp"
                     android:background="@color/colorPrimary"
                     android:elevation="2dp"
                     android:onClick="ProcessStart"
                     android:padding="16dp"
-                    android:text="@string/upload_data"
+                    android:text="@string/btnUpload"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/btnUploadPhotos"
                     style="@style/TextAppearance.AppCompat.Small"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
 
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -86,8 +104,7 @@
                     android:padding="16dp"
                     android:text="Upload Photos"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:visibility="visible" />
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
@@ -155,21 +172,21 @@
                         android:elevation="1dp"
                         android:gravity="center_horizontal"
                         android:paddingBottom="1dp"
-                        android:shadowColor="@color/grayLight"
+                        android:shadowColor="@color/colorPrimaryDark"
                         android:shadowDx="1"
                         android:shadowDy="1"
                         android:shadowRadius="1"
                         android:text="Upload Photo"
                         android:visibility="gone" />
 
-                    <!--           <ProgressBar
-                                   android:id="@+id/pBar"
-                                   style="@android:style/Widget.ProgressBar.Horizontal"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="2dp"
-                                   android:indeterminate="false"
-                                   android:progress="1"
-                                   android:visibility="gone" />-->
+                    <ProgressBar
+                        android:id="@+id/pBar"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:indeterminate="false"
+                        android:progress="1"
+                        android:visibility="gone" />
 
                     <LinearLayout
                         android:id="@+id/photoLayout"
@@ -191,25 +208,21 @@
 
                         <TextView
                             android:id="@+id/activityTitle"
+                            style="@style/labelsHead"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="12dp"
-                            android:layout_marginBottom="1dp"
-                            android:background="@color/whiteOverlay"
-                            android:elevation="1dp"
-                            android:gravity="center_horizontal"
-                            android:paddingBottom="1dp"
-                            android:shadowColor="@color/grayLight"
-                            android:shadowDx="1"
-                            android:shadowDy="1"
-                            android:shadowRadius="1"
-                            android:text="Download Data" />
+                            android:gravity="center_horizontal|center_vertical"
+                            android:text="DATA SYNC"
+                            android:textColor="@color/colorPrimary" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rv_upload_list"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@color/grayLight"
                             android:visibility="visible"
+                            android:padding="12dp"
+                            tools:itemCount="4"
                             tools:listitem="@layout/sync_list_adapter">
 
                         </androidx.recyclerview.widget.RecyclerView>
@@ -223,15 +236,10 @@
                             android:text="No Activty"
                             android:textColor="@color/redLight"
                             android:visibility="gone" />
-
                     </LinearLayout>
-
                 </LinearLayout>
-
             </androidx.cardview.widget.CardView>
-
         </LinearLayout>
-
     </ScrollView>
 
 </layout>
