--- a/app/src/main/res/layout/activity_cm_identification.xml
+++ b/app/src/main/res/layout/activity_cm_identification.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.uen_kmc.ui.IdentificationActivity" />
+            type="edu.aku.hassannaqvi.uen_kmc.ui.CMIdentificationActivity" />
     </data>
 
     <LinearLayout
