Added Entry Log + User Mang. + Encryption

--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -16,6 +16,9 @@
                 android:title="Open Debug Database"
                 app:showAsAction="collapseActionView" />
             <item
+                android:id="@+id/changePassword"
+                android:title="Change Password" />
+            <item
                 android:id="@+id/onSync"
                 android:title="Sync Data"
                 app:showAsAction="collapseActionView" />
